loopdowhile.Poucet2.scala.error
Erreur de compilation :
Poucet2:1: error: Missing closing brace `}' assumed here
while (!sortieTrouvee()){
^Poucet2:18: error: 'while' expected but '}' found.
	}
        ^