loopdowhile.Poucet2.scala.code
while (!sortieTrouvee()){
  var baggle=0
  do {
    forward()
    while (!crossing()){
      if (estSurBiscuit()){
        baggle = baggle + 1
      }
    }
    if (buggle>=3){
      left()
    }
    else {
      right()
    }
  }